<?xml version="1.0"?>
<package format="3">
  <name>ui_proxy</name>
  <version>0.0.1</version>
  <description>Subscribes Control and will forward via TCP server</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>demo_interfaces</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>demo_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

