<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xviz_converter</name>
  <version>0.1.0</version>
  <description>XVIZ WebSocket converter for control messages</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>demo_interfaces</depend>
  <depend>libboost-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

